--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 * {
 	font-family: "Helvetica neue", sans-serif;
 }
+html {
+	width:100%;
+	height: 100%;
+}
 .lot {
 	border: 1px solid gray;
 	padding: 5px;
